--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
-# API Keys for Gemini Adapter
-# Rename this file to .env and fill in your keys
+GOOGLE_GEMINI_BASE_URL=http://127.0.0.1:5001
 
-# Google Gemini (Required for default routing)
+# API Keys for Gemini Adapter
+# Get your keys from:
+# - Google Gemini: https://aistudio.google.com/apikey
+# - Groq: https://console.groq.com/keys
+# - OpenAI: https://platform.openai.com/api-keys
+# - DeepSeek: https://platform.deepseek.com/api_keys
+# - Anthropic: https://console.anthropic.com/settings/keys
+# - Together AI: https://api.together.xyz/settings/api-keys
+
+# Google Gemini (**** Required for default routing, even if you use other models, wrong pwd will do ***)
 GEMINI_API_KEY=
+
+# Groq (Free and fast!)
+GROQ_API_KEY=
 
 # OpenAI (Optional)
 OPENAI_API_KEY=
@@ -13,8 +24,8 @@ DEEPSEEK_API_KEY=
 # Anthropic Claude (Optional)
 ANTHROPIC_API_KEY=
 
-# Groq (Optional - Free!)
-GROQ_API_KEY=
-
 # Together AI (Optional)
 TOGETHER_API_KEY=
+
+# GitHub (Optional)
+GITHUB_API_KEY=
